syntax = "proto3";

package broker;

import "google/protobuf/empty.proto";

// Base message for service information
message ServiceInfo {
  string interface_name = 1;
  string role = 2; // Optional: specific role name
}

// Message for service registration
message ServiceRegistration {
  ServiceInfo info = 1;
  string url = 2;
  int32 port = 3;
}

// Message for service lookup request
message ServiceLookupRequest {
  string interface_name = 1;
  string role = 2; // Optional: role to filter the services
}

// Message for service lookup response
message ServiceLookupResponse {
  string url = 1;
  int32 port = 2;
  string error = 3; // Optional: error message if service not found
}

// Message for available services
message AvailableServices {
  repeated ServiceRegistration services = 1;
}

// Message for service change notification
message ServiceChangeNotification {
  ServiceInfo info = 1;
  string url = 2;
  int32 port = 3;
  string change_type = 4; // "registered" or "unregistered"
}

// Service definition for the broker
service Broker {
  // Register a service
  rpc RegisterService(ServiceRegistration) returns (google.protobuf.Empty);

  // Lookup a service
  rpc LookupService(ServiceLookupRequest) returns (ServiceLookupResponse);

  // Get all available services
  rpc GetAvailableServices(google.protobuf.Empty) returns (AvailableServices);

  // Unregister a service
  rpc UnregisterService(ServiceInfo) returns (google.protobuf.Empty);

  // Notify service changes
  rpc NotifyServiceChanges(google.protobuf.Empty) returns (stream ServiceChangeNotification);
}
